--- a/index.html
+++ b/index.html
@@ -90,17 +90,20 @@
             <header class="header">
                 <div class="top-header">
                     <div class="top-left-header">
-                        <label for="search"></label>
-                        <input type="text" name="search_text" id="search">
+                        <svg style="width:24px;height:24px" viewBox="0 0 20 20">
+                            <path fill="currentColor"
+                                d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                        </svg>
+                        <label for="search">
+                            <input type="text" name="search_text" id="search" class="search" placeholder="Search...">
+                        </label>
                     </div>
                     <div class="top-right-header">
-                        <img src="" alt="" class="user-logo">
-                        <p class="username">Morgan Oakley</p>
+                        <h3 class="username">Morgan Oakley</h3>
                     </div>
                 </div>
                 <div class="mid-header">
                     <div class="left-mid-header">
-                        <img src="" alt="" class="user-logo">
                         <div class="header-username">
                             <p>Hi there,</p>
                             <p>Morgan Oakley (@morgan)</p>
@@ -108,9 +111,9 @@
                     </div>
                     <div class="right-mid-header">
                         <ul>
-                            <li>New</li>
-                            <li>Upload</li>
-                            <li>Share</li>
+                            <li><button class="header-button">New</button></li>
+                            <li><button class="header-button">Upload</button></li>
+                            <li><button class="header-button">Share</button></li>
                         </ul>
                     </div>
                 </div>
